# PIMCOM

./: .gitignore  CMakeLists.txt  common.h  configure.h  main.cpp
backend/: CrossbarPartition.cpp  CrossbarPartition.h  DetailAppend.cpp  DetailAppend.h  ElementPipelineDesign.cpp  ElementPipelineDesign.h  ElementPipelineSchedule.cpp  ElementPipelineSchedule.h  ElementPlacement.cpp  ElementPlacement.h  ExecutionSchedule.cpp  ExecutionSchedule.h  HierarchyMapping.cpp  HierarchyMapping.h  InferencePipelineDesign.cpp  InferencePipelineDesign.h  InferencePipelineDesignFast.cpp  InferencePipelineDesignSlow.cpp  InferencePipelineSchedule.cpp  InferencePipelineSchedule.h  InferencePipelineScheduleFast.cpp  InferencePipelineScheduleSlow.cpp  MemoryAllocation.cpp  MemoryAllocation.h  MemoryAllocationFast.cpp  MemoryAllocationSlow.cpp  PIMCOMVariable.h  PipelineDesign.cpp  PipelineDesign.h  PipelineDesignAndSchedule.cpp  PipelineDesignAndSchedule.h  Preparation.cpp  Preparation.h  RowPipelineDesign.cpp  RowPipelineDesign.h  RowPipelineSchedule.cpp  RowPipelineSchedule.h  WeightReplication.cpp  WeightReplication.h  common.h  (+6 more)
evaluation/: ModelEvaluation.cpp  ModelEvaluation.h
frontend/: CMakeLists.txt  front_end.cpp  front_end.hpp  structure.h
models/JSON/: CR.json  CRP.json  CRPF.json  agp_example.json  alexnet.json  inception-v1的副本.json  inceptionsim.json  resnet18.json  resnetsim.json  row.json  row2.json  schedule.json  schedule2.json  vgg16.json  vggsim.json
scripts/: ONNX2JSON-wo-weight.py  ONNX2JSON.py
